# backend/pkg/server/docs/swagger.yaml
@@ -588,6 +588,19 @@ definitions:
     - date
     - stats
     type: object
+  models.EmailChange:
+    properties:
+      current_password:
+        maxLength: 100
+        minLength: 5
+        type: string
+      mail:
+        maxLength: 50
+        type: string
+    required:
+    - current_password
+    - mail
+    type: object
   models.Flow:
     properties:
       created_at:
@@ -6710,6 +6723,47 @@ paths:
           schema:
             $ref: '#/definitions/ErrorResponse'
       summary: Retrieve current user information
+      tags:
+      - Users
+  /user/email:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: container to validate and update account email
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/models.EmailChange'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: account email updated successful
+          schema:
+            $ref: '#/definitions/SuccessResponse'
+        "400":
+          description: invalid account email form data
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "403":
+          description: updating account email not permitted
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "404":
+          description: current user not found
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "409":
+          description: email already exists
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        "500":
+          description: internal error on updating account email
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+      summary: Update email for current user (account)
       tags:
       - Users
   /user/password:
