# backend/pkg/server/models/users.go
@@ -302,3 +302,27 @@ type UserWithPreferences struct {
 	User        User
 	Preferences UserPreferences
 }
+
+// EmailChange is model to contain user email to change it
+type EmailChange struct {
+	CurrentPassword string `form:"current_password" json:"current_password" validate:"min=5,max=100,required" gorm:"-"`
+	Mail            string `form:"mail" json:"mail" validate:"max=50,vmail,required" gorm:"type:TEXT"`
+}
+
+// TableName returns the table name string to guaranty use correct table
+func (ec *EmailChange) TableName() string {
+	return "users"
+}
+
+// Valid is function to control input/output data
+func (ec EmailChange) Valid() error {
+	return validate.Struct(ec)
+}
+
+// Validate is function to use callback to control input/output data
+func (ec EmailChange) Validate(db *gorm.DB) {
+	if err := ec.Valid(); err != nil {
+		db.AddError(err)
+	}
+}
+
